C language support